2003-03-20  Ole Laursen  <olau@hardworking.dk>

	* gtk/src/widget.hg: Applied patch from Detlef Reichl to add
	protected set_window and set_allocation (#108484).

2003-03-18  Cedric Gustin  <cgustin@ibelgique.com>

	* Makefile.am : removed examples from DIST_SUBDIRS.

2003-03-13  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* gdk/src/gc.hg: Added refreturn flag to both GC::get_screen() flavors.
	Closes bug #108233. (With help by Sven Grottke.)

2003-02-14  Bryan Forbes  <mxpxfifws@yahoo.com>

	* gtk/src/accelgroup.hg:
	* gtk/src/accellabel.hg:
	* gtk/src/adjustment.hg:
	* gtk/src/alignment.hg:
	* gtk/src/arrow.hg:
	* gtk/src/aspectframe.hg:
	* gtk/src/bin.hg: Added documentation for constructors and
	_MEMBER_GET() wrappers.
	* gtk/src/box.hg: Added the PackOptions enum into the gtkmmEnums
	group so it is now on the correct documentation page.
	* gtk/src/enums.hg: Allow Doxygen to grab Gtk::AlignmentEnum (used in
	alignment.hg and others) and added it to the gtkmmEnums group.
	* gtk/src/gtk_docs_override.xml: Added documentation for methods
	in accelgroup.hg, accellabel.hg, adjusment.hg, and arrow.hg.
	
2003-01-27  Murray Cumming  <murrayc@usa.net>
 
 	* gdk/src/display.hg: Used refreturn on  get_default() and
 	get_core_pointer(), preventing segfaults.
	
2003-01-27  Murray Cumming  <murrayc@usa.net>

	* Replaced use of RefPtr::is_null() with use of operator bool().

2003-01-24  Murray Cumming  <murrayc@usa.net>

	* gtk/gtkmm/menu_elems.cc: Element::Element(MenuItem): Use the
	Glib::RefPtr<> constructor explicitly, for clarity, and do the
	necessary extra ref - fixes lifetime bug 104194

2003-01-23  Murray Cumming  <murrayc@usa.net>

	* More TODOs:
	  - Gtk::Container: Removed const set_focus_chain(), added const 
	    get_focus_chain().
          - Gtk::TreeDragSource::drag_data_get() and 
	    Gtk::TreeDragDest::row_drag_possible() now use SelectionData 
	    instead of GtkSelectionData.

2003-01-23  Murray Cumming  <murrayc@usa.net>
