@@ -3,7 +3,7 @@ Building gtkmm on Win32
 
 Currently, only the mingw (native win32) gcc compiler is supported
 through the gnu autotools (automake, autoconf, libtool). As explicitly
-stated in the gtk+ for win32 distribution (http://www.gimp.org/win32),
+stated in the gtk+ for win32 distribution (http://www.gimp.org/win32/),
 the gcc compiler provided by the cygwin distribution should not be
 used to build gtk+/gtkmm libraries and/or applications (see the
 README.win32 that comes with the gtk+ DLLs). This MIGHT cause
@@ -11,12 +11,10 @@ conflicts between the cygwin and msvcrt runtime environments.
 
 1. Mingw
 
-The mingw distribution which has been tested with this release is the following
+The mingw distribution which has been tested with this release is the
+following :
 
-MinGW-1.1 as the base distribution plus the update packages :
-mingw-runtime-1.3
-binutils-2_12_90-20020518-1
-w32api-1.4-2
+* MinGW-2.0 as the base distribution.
 
 The bare mingw distribution does not provide the necessary tools (sh, perl, m4
 , autoconf, automake, ..) to run the provided configure script "as is". One 
@@ -28,7 +26,7 @@ that were mentioned above) with mingw by making sure that the mingw
 tools (gcc, ld, dlltool, ..) are called first.
 
 First, make sure that you have working distribution of the native port
-of both libsigc++-1.1.x gtk+-2.0 on win32 (see
+of both libsigc++-1.2.x and gtk+-2.0 on win32 (see
 http://www.gimp.org/win32). If you can't compile a simple gtk+ example
 using gcc and `pkg-config --cflags --libs`, you should not even think
 about trying to compile gtkmm, let alone using precompiled libgtkmm
@@ -49,9 +47,9 @@ Because Dll support with libtool on the mingw32 platform is fairly recent, it
 requires developement version of autoconf/automake and libtool, as provided by
 the autotools-devel package in the cygwin distribution. Currently, this means
 
-libtool : 1.4.2
-automake : 1.5b
-autoconf : 2.52
+libtool : 1.4e
+automake : 1.7.2
+autoconf : 2.57
 
 IMPORTANT WARNING : the libtool scripts contained in the source distribution
 of the library might not be recent enough to support dll creation. It will 
@@ -63,7 +61,7 @@ of libtool that is being used when compiling libsigc++ on win32 by calling
 
 libtool --version 
 
-once it has be created by the configure script.
+once it has been created by the configure script.
 
 If libtool is too old, it will be necessary to overwrite it using 
 
@@ -81,12 +79,53 @@ before running the configure script again.
 In the future, a specially tuned source distribution along with a binary 
 package might be provided for mingw.
 
-3. Oher compilers (MSVC, borland)
+2. Other compilers (MSVC, borland)
 
-While some compiler options are present in sigc++/config/sigcconfig.h.in,
-other compilers are currently not supported but anyone is free to give it 
+While some compiler options are present in the configuration files,
+other compilers are currently not supported, but everyone is free to give it 
 a try ! 
 
+3. Gtkmm methods and signals not available on win32
 
+Although is the win32 port of gtk+-2 is rapidly catching up with it
+unix counterpart, some gtkmm methods and signals are still missing on
+win32. These are
 
+* Implemented in the C library but not DLL exported
+
+Glibmm :	
+	ThreadPool::get_num_unused_threads
+	ThreadPool::stop_unused_threads
+
+Atkmm :
+	Component::get_layer
+	Component::get_mdi_zorder
+
+Gdkmm :
+	Screen::list_visuals
+	Screen::make_display_name
+	Screen::get_width_mm
+	Screen::get_height_mm
+	Screen::broadcast_client_message
+	Display::get_drag_protocol
+	DisplayManager::get_type (DisplayManager is currently disabled)
+
+Gtkmm :
+	Clipboard::get_type (Clipboard is currently disabled)
+	TreeRowReference::get_type (TreeRowReference is currently disabled)
+	Widget::get_clipboard (because Clipboard is currently disabled)
+	Window::get_skip_taskbar_hint
+
+* Not Implemented in the C library
+
+Atkmm :
+	Action::get_localized_name
+	Object::add_relationship
+	Object::remove_relationship
+	Object::active_descendant_changed (signal)
+	Text::text_attributes_changed
+
+Gtkmm :
+	Gtk::Plug (not available on win32)
+	Gtk::Socket (not available on win32)
 
