@@ -40,7 +40,9 @@ public:
   _WRAP_METHOD(Glib::ustring get_name(int i) const, atk_action_get_name)
   _WRAP_METHOD(Glib::ustring get_keybinding(int i), atk_action_get_keybinding)
   _WRAP_METHOD(bool set_description(int i, const Glib::ustring& desc), atk_action_set_description)
+_GTKMMPROC_H_AND_CC(#ifndef G_OS_WIN32)
   _WRAP_METHOD(Glib::ustring get_localized_name(int i), atk_action_get_localized_name)
+_GTKMMPROC_H_AND_CC(#endif /* G_OS_WIN32 */)
 
 protected:
   _WRAP_VFUNC(bool do_action(int i), "do_action")
