@@ -52,8 +52,10 @@ public:
   _WRAP_METHOD(void get_extents(int& x, int& y, int& width, int& height, CoordType coord_type) const, atk_component_get_extents)
   _WRAP_METHOD(void get_position(int& x, int& y, CoordType coord_type) const, atk_component_get_position)
   _WRAP_METHOD(void get_size(int& width, int& height) const, atk_component_get_size)
+_GTKMMPROC_H_AND_CC(#ifndef G_OS_WIN32)
   _WRAP_METHOD(Layer get_layer() const, atk_component_get_layer)
   _WRAP_METHOD(int get_mdi_zorder() const, atk_component_get_mdi_zorder)
+_GTKMMPROC_H_AND_CC(#endif /* G_OS_WIN32 */)
   _WRAP_METHOD(bool grab_focus(), atk_component_grab_focus)
   _WRAP_METHOD(void remove_focus_handler(guint handler_id), atk_component_remove_focus_handler)
   _WRAP_METHOD(bool set_extents(int x, int y, int width, int height, CoordType coord_type), atk_component_set_extents)
