@@ -65,9 +65,10 @@ public:
   //_WRAP_METHOD(void remove_property_change_handler(guint handler_id), atk_object_remove_property_change_handler)
   _WRAP_METHOD(void notify_state_change(State state, bool value), atk_object_notify_state_change)
 
-
+_GTKMMPROC_H_AND_CC(#ifndef G_OS_WIN32)
   _WRAP_METHOD(bool add_relationship(RelationType relationship, const Glib::RefPtr<Object>& target), atk_object_add_relationship)
   _WRAP_METHOD(bool remove_relationship(RelationType relationship, const Glib::RefPtr<Object>& target), atk_object_remove_relationship)
+_GTKMMPROC_H_AND_CC(#endif /* G_OS_WIN32 */)
 
 
   _WRAP_SIGNAL(void children_changed(guint change_index, gpointer changed_child), "children_changed")
@@ -75,7 +76,9 @@ public:
   _WRAP_SIGNAL(void property_change(AtkPropertyValues* values), "property_change")
   _WRAP_SIGNAL(void state_change(const Glib::ustring& name, bool state_set), "state_change")
   _WRAP_SIGNAL(void visible_data_changed(), "visible_data_changed")
+_GTKMMPROC_SIGNAL_H_AND_CC(#ifndef G_OS_WIN32)
   _WRAP_SIGNAL(void active_descendant_changed(void** child), "active_descendant_changed")
+_GTKMMPROC_SIGNAL_H_AND_CC(#endif /* G_OS_WIN32 */)
 
   _WRAP_PROPERTY("accessible-name", Glib::ustring)
   _WRAP_PROPERTY("accessible-description", Glib::ustring)
