@@ -139,7 +139,9 @@ public:
   _WRAP_SIGNAL(void text_changed(int position, int length), "text_changed")
   _WRAP_SIGNAL(void text_caret_moved(int location), "text_caret_moved")
   _WRAP_SIGNAL(void text_selection_changed(), "text_selection_changed")
+_GTKMMPROC_SIGNAL_H_AND_CC(#ifndef G_OS_WIN32)
   _WRAP_SIGNAL(void text_attributes_changed(), "text_attributes_changed")
+_GTKMMPROC_SIGNAL_H_AND_CC(#endif /* G_OS_WIN32 */)
 
 protected:
 #m4 _CONVERSION(`Glib::ustring', `gchar*', `g_strdup(($3).c_str())')
