@@ -3,5 +3,5 @@ web_path_gtkmm2 = /home/groups/g/gt/gtkmm/htdocs/gtkmm2/
 web_path_docs = $(web_path_gtkmm2)docs/
 rsync_args = -vz --rsh ssh --delete --delete-after
 
-gtkmm_docdir = $(datadir)/doc/gtkmm-2.4
+gtkmm_docdir = $(datadir)/doc/gtkmm-2.4/docs
 
