@@ -17,3 +17,31 @@ DEFS			= @DEFS@
 DEFAULT_INCLUDES	=
 INCLUDES		= -I. -I$(srcdir) $(strip $(all_includes))
 
+gtkmm_docdir = $(datadir)/doc/gtkmm-2.4
+
+install-example-src:
+	@$(NORMAL_INSTALL)
+	$(mkinstalldirs) $(DESTDIR)$(gtkmm_docdir)/$(subdir)
+	for p in $(srcdir)/*.cc $(srcdir)/*.h; do \
+	  if test -f $$p; then \
+	    f="`echo $$p | sed -e 's|^.*/||'`"; \
+	    echo " $(INSTALL_DATA) $$p  $(DESTDIR)$(gtkmm_docdir)/$(subdir)/$$f"; \
+	    $(INSTALL_DATA) $$p  $(DESTDIR)$(gtkmm_docdir)/$(subdir)/$$f; \
+	  fi; \
+	done
+
+uninstall-example-src:
+	@$(NORMAL_UNINSTALL)
+	for p in $(srcdir)/*.cc $(srcdir)/*.h; do \
+	  if test -f $$p; then \
+	    f="`echo $$p | sed -e 's|^.*/||'`"; \
+	    echo " rm -f  $(DESTDIR)$(gtkmm_docdir)/$(subdir)/$$f"; \
+	    rm -f  $(DESTDIR)$(gtkmm_docdir)/$(subdir)/$$f; \
+	  fi; \
+	done
+
+install-data-local: install-example-src
+
+uninstall-local: uninstall-example-src
+
+.PHONY: install-example-src uninstall-example-src
