@@ -2,10 +2,10 @@
 # The include happens in Makefile.am, not Makefile.in or Makefile,
 # so it's like copy-and-pasting this into each of those Makefile.am files.
 
-files_posix_hg =
+files_posix_hg = displaymanager.hg
 files_win32_hg =
 files_general_hg = bitmap.hg color.hg colormap.hg cursor.hg \
-           device.hg display.hg displaymanager.hg dragcontext.hg drawable.hg event.hg gc.hg image.hg \
+           device.hg display.hg dragcontext.hg drawable.hg event.hg gc.hg image.hg \
            pixbuf.hg pixbufanimation.hg pixbufanimationiter.hg pixmap.hg pixbufloader.hg \
            rectangle.hg region.hg rgbcmap.hg screen.hg types.hg visual.hg window.hg
 
