@@ -115,7 +115,9 @@ public:
 
   _WRAP_METHOD(static Glib::RefPtr<Display> open_default_libgtk_only(), gdk_display_open_default_libgtk_only)
 
+_GTKMMPROC_H_AND_CC(#ifndef G_OS_WIN32)
   _WRAP_METHOD(guint32 get_drag_protocol(guint32 xid, GdkDragProtocol& protocol), gdk_drag_get_protocol_for_display)
+_GTKMMPROC_H_AND_CC(#endif /* G_OS_WIN32*/)
 
   _WRAP_METHOD(GdkKeymap* get_keymap(), gdk_keymap_get_for_display)
   _WRAP_METHOD(const GdkKeymap* get_keymap() const, gdk_keymap_get_for_display)
