@@ -32,6 +32,7 @@ namespace Gdk
 class DisplayManager : public Glib::Object
 {
   _CLASS_GOBJECT(DisplayManager,GdkDisplayManager,GDK_DISPLAY_MANAGER,Glib::Object,GObject)
+  _GTKMMPROC_WIN32_NO_WRAP
 protected:
 
 public:
