@@ -66,19 +66,27 @@ public:
   _WRAP_METHOD(int get_number() const, gdk_screen_get_number)
   _WRAP_METHOD(int get_width() const, gdk_screen_get_width)
   _WRAP_METHOD(int get_height() const, gdk_screen_get_height)
+_GTKMMPROC_H_AND_CC(#ifndef G_OS_WIN32)
   _WRAP_METHOD(int get_width_mm() const, gdk_screen_get_width_mm)
   _WRAP_METHOD(int get_height_mm() const, gdk_screen_get_height_mm)
+_GTKMMPROC_H_AND_CC(#endif /* G_OS_WIN32 */)
 
+_GTKMMPROC_H_AND_CC(#ifndef G_OS_WIN32)
   _WRAP_METHOD(Glib::ListHandle< Glib::RefPtr<Visual> > list_visuals(), gdk_screen_list_visuals)
+_GTKMMPROC_H_AND_CC(#endif /* G_OS_WIN32 */)
   _WRAP_METHOD(Glib::ListHandle< Glib::RefPtr<Window> > get_toplevel_windows(), gdk_screen_get_toplevel_windows)
+_GTKMMPROC_H_AND_CC(#ifndef G_OS_WIN32)
   _WRAP_METHOD(Glib::ustring make_display_name(), gdk_screen_make_display_name)
+_GTKMMPROC_H_AND_CC(#endif /* G_OS_WIN32 */)
 
   _WRAP_METHOD(int get_n_monitors() const, gdk_screen_get_n_monitors)
   _WRAP_METHOD(void get_monitor_geometry(int monitor_num, Rectangle& dest) const, gdk_screen_get_monitor_geometry)
   _WRAP_METHOD(int get_monitor_at_point(int x, int y) const, gdk_screen_get_monitor_at_point)
   _WRAP_METHOD(int get_monitor_at_window(const Glib::RefPtr<Window>& window) const, gdk_screen_get_monitor_at_window)
 
+_GTKMMPROC_H_AND_CC(#ifndef G_OS_WIN32)
   _WRAP_METHOD(void broadcast_client_message(GdkEvent* event), gdk_screen_broadcast_client_message)
+_GTKMMPROC_H_AND_CC(#endif /* G_OS_WIN32 */)
 
   _WRAP_METHOD(static Glib::RefPtr<Screen> get_default(), gdk_screen_get_default)
 
