@@ -138,9 +138,7 @@ public:
   _WRAP_METHOD(void set_icon_name(const Glib::ustring& name), gdk_window_set_icon_name)
   _WRAP_METHOD(void set_group(const Glib::RefPtr<Window>& leader), gdk_window_set_group)
   _WRAP_METHOD(void set_decorations(WMDecoration decorations), gdk_window_set_decorations)
-_GTKMMPROC_H_AND_CC(#ifndef GDKMM_WIN32)
   _WRAP_METHOD(bool get_decorations(WMDecoration& decorations), gdk_window_get_decorations)
-_GTKMMPROC_H_AND_CC(#endif)
   _WRAP_METHOD(void set_functions(WMFunction functions), gdk_window_set_functions)
   _WRAP_METHOD(static GList* get_toplevels(), gdk_window_get_toplevels)
   _WRAP_METHOD(void iconify(), gdk_window_iconify)
