@@ -2,13 +2,13 @@
 # The include happens in Makefile.am, not Makefile.in or Makefile,
 # so it's like copy-and-pasting this into each of those Makefile.am files.
 
-files_posix_hg = plug.hg socket.hg
+files_posix_hg = clipboard.hg plug.hg socket.hg treerowreference.hg
 files_win32_hg = 
 files_general_hg = accelgroup.hg accellabel.hg adjustment.hg alignment.hg arrow.hg aspectframe.hg \
           bin.hg box.hg button.hg buttonbox.hg \
           calendar.hg celleditable.hg checkbutton.hg checkmenuitem.hg \
           cellrenderer.hg cellrendererpixbuf.hg cellrenderertext.hg cellrenderertoggle.hg \
-          clipboard.hg colorselection.hg combo.hg container.hg curve.hg \
+          colorselection.hg combo.hg container.hg curve.hg \
           dialog.hg drawingarea.hg \
           editable.hg entry.hg enums.hg eventbox.hg \
           fileselection.hg fixed.hg fontselection.hg frame.hg \
@@ -24,7 +24,7 @@ files_general_hg = accelgroup.hg accellabel.hg adjustment.hg alignment.hg arrow.
           stockitem.hg style.hg \
           table.hg tearoffmenuitem.hg \
           textattributes.hg textbuffer.hg textchildanchor.hg textiter.hg textmark.hg texttag.hg texttagtable.hg textview.hg\
-          togglebutton.hg toolbar.hg tooltips.hg treedragdest.hg treedragsource.hg treepath.hg treeselection.hg treesortable.hg treerowreference.hg\
+          togglebutton.hg toolbar.hg tooltips.hg treedragdest.hg treedragsource.hg treepath.hg treeselection.hg treesortable.hg \
           treeiter.hg treemodel.hg treemodelsort.hg treestore.hg treeview.hg treeviewcolumn.hg \
           viewport.hg \
           widget.hg window.hg
