@@ -35,7 +35,7 @@ namespace Gtk
 class Clipboard : public Glib::Object
 {
    _CLASS_GOBJECT(Clipboard, GtkClipboard, GTK_CLIPBOARD, Glib::Object, GObject)
-
+   _GTKMMPROC_WIN32_NO_WRAP
 public:
 
   _WRAP_METHOD(static Glib::RefPtr<Clipboard> get(GdkAtom selection = GDK_SELECTION_CLIPBOARD), gtk_clipboard_get, refreturn)
