@@ -207,8 +207,10 @@ public:
   
   _WRAP_METHOD(Glib::RefPtr<Settings> get_settings(), gtk_widget_get_settings, refreturn)
 
+_GTKMMPROC_H_AND_CC(#ifndef G_OS_WIN32)
   _WRAP_METHOD(Glib::RefPtr<Clipboard> get_clipboard(GdkAtom selection), gtk_widget_get_clipboard, refreturn)
   _WRAP_METHOD(Glib::RefPtr<const Clipboard> get_clipboard(GdkAtom selection) const, gtk_widget_get_clipboard, refreturn)
+_GTKMMPROC_H_AND_CC(#endif /* G_OS_WIN32 */)
 
   _WRAP_METHOD(Glib::RefPtr<Atk::Object> get_accessible(), gtk_widget_get_accessible, refreturn)
 
