@@ -124,7 +124,9 @@ public:
 
   _WRAP_METHOD(void set_skip_taskbar_hint(bool setting = true), gtk_window_set_skip_taskbar_hint)
 
+_GTKMMPROC_H_AND_CC(#ifndef G_OS_WIN32)
   _WRAP_METHOD(bool get_skip_taskbar_hint() const, gtk_window_get_skip_taskbar_hint)
+_GTKMMPROC_H_AND_CC(#endif /* G_OS_WIN32 */)
 
   _WRAP_METHOD(void set_skip_pager_hint(bool setting = true), gtk_window_set_skip_pager_hint)
 
