@@ -49,7 +49,9 @@ int main (int argc, char *argv[])
   std::cout << get_defs( GDK_TYPE_COLORMAP )
             << get_defs( GDK_TYPE_DRAG_CONTEXT )
             << get_defs( GDK_TYPE_DISPLAY )
+#if !defined(G_OS_WIN32)
             << get_defs( GDK_TYPE_DISPLAY_MANAGER )
+#endif /* G_OS_WIN32 */
             << get_defs( GDK_TYPE_DRAWABLE )
             << get_defs( GDK_TYPE_GC )
             << get_defs( GDK_TYPE_IMAGE )
@@ -113,9 +115,9 @@ int main (int argc, char *argv[])
             << get_defs( GTK_TYPE_OPTION_MENU )
             << get_defs( GTK_TYPE_PANED )
             << get_defs( GTK_TYPE_PIXMAP )
-#if !defined(_WIN32)
+#if !defined(G_OS_WIN32)
             << get_defs( GTK_TYPE_PLUG )
-#endif
+#endif /* G_OS_WIN32 */
             << get_defs( GTK_TYPE_PREVIEW )
             << get_defs( GTK_TYPE_PROGRESS )
             << get_defs( GTK_TYPE_PROGRESS_BAR )
@@ -129,9 +131,9 @@ int main (int argc, char *argv[])
             << get_defs( GTK_TYPE_SEPARATOR )
             << get_defs( GTK_TYPE_SETTINGS )
             << get_defs( GTK_TYPE_SIZE_GROUP )
-#if !defined(_WIN32)
+#if !defined(G_OS_WIN32)
             << get_defs( GTK_TYPE_SOCKET )
-#endif
+#endif /* G_OS_WIN32 */
             << get_defs( GTK_TYPE_SPIN_BUTTON )
             << get_defs( GTK_TYPE_STATUSBAR )
             << get_defs( GTK_TYPE_STYLE )
