@@ -1,7 +1,11 @@
+2003-03-22  Enrico Scholz  <enrico.scholz@informatik.tu-chemnitz.de>
+ 
+	* examples/Makefile.am_fragment:  Added DESTDIR-support. 
+
 2003-03-20  Ole Laursen  <olau@hardworking.dk>
 
 	* gtk/src/widget.hg: Applied patch from Detlef Reichl to add
-	protected set_window and set_allocation (#108484).
+	protected set_window and set_allocation (#108484).	
 
 2003-03-18  Cedric Gustin  <cgustin@ibelgique.com>
 
